configuración base del proyecto, dockerizacion y esquema oficial